# Relay-agent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.txt  README.md  RELEASE_NOTES.md  SECURITY.md  SHA256SUMS.txt  build_release.py  log.md  manual.md  memo.md  pyproject.toml  relay.pyz
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: relay.example.toml
docs/: AUTOMATIC_CLEANUP.md  CAPABILITY_AUDIT.md  CROSS_PLATFORM.md  DATABASE_MIGRATION.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_ORIGINAL.md  KNOWN_LIMITATIONS.md  RESEARCH_NOTES.md  Relay_GUI_Development_Plan_v1.0.md  Relay_GUI_Development_Plan_v1.2.md  Relay_GUI_Development_Plan_v1.3.md  SECURITY.md  TEST_REPORT.md
mocks/: agy  agy.cmd  claude  claude.cmd  codex  codex.cmd  mock_ai_cli.py
relay/: __init__.py  agent_apps.py  agent_registry.py  api.py  autostart.py  cleanup.py  cli.py  compatibility.py  config.py  daemon.py  db.py  delivery.py  doctor.py  engine.py  errors.py  model_catalog.py  model_discovery.py  models.py  process_supervisor.py  progress.py  request_builder.py  rpc.py  security.py  target_workspace.py  util.py  validation.py
scripts/: create_relay_worker.ps1  install_unix.sh  install_windows.ps1  relay  relay.cmd  test_isolated.py  uninstall_unix.sh  uninstall_windows.ps1
tests/: test_add_agent.py  test_g0_api.py  test_g1_gui.py  test_g2_api.py  test_g2_gui.py  test_g3_api.py  test_g3_cli.py  test_g3_db.py  test_g3_integration.py  test_g3_retention.py  test_g3_rules.py  test_g3_runtime.py  test_g3_snapshots.py  test_g4_api_readiness.py  test_g4_autostart.py  test_g4_autostart_api.py  test_g4_rpc_methods.py  test_g4_schedule_detail.py  test_g4_schedule_editor.py  test_g4_schedule_gui.py  test_g4_settings.py  test_g5_agent_api.py  test_g5_agent_cli.py  test_g5_agent_gui.py  test_g5_agent_service.py  test_g5_dynamic_workers.py  test_g5_generic_adapter.py  test_g5_manifests.py  test_g5_registry.py  test_g5_schedule_custom.py  test_migrations.py  test_progress.py  test_relay.py  test_security.py  test_target_workspace.py
wiki/: decisions.md  goals-and-scope.md  index.md  knowledge-and-evidence.md  overview.md  (+2 more)
(+42 files in other folders)
