[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-ai-cli-broker"
version = "0.5.0"
description = "Reliable delegation broker for Antigravity CLI, Claude Code, and Codex CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
relay = "relay.cli:main"

[tool.setuptools.packages.find]
include = ["relay*"]
