[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-ai-cli-broker"
dynamic = ["version"]
description = "Reliable delegation broker for Antigravity CLI, Claude Code, and Codex CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
relay = "relay.cli:main"

[tool.setuptools.dynamic]
version = { attr = "relay.__version__" }

[tool.setuptools.packages.find]
include = ["relay*"]
